# samee-backend

./: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  sample.env  start_server.sh  wsgi.py
.github/workflows/: python-app.yml
app/: __init__.py  admin_page.py
app/controllers/: send_email.py  sms_send.py  twilio.py
app/forms/: __init__.py  auth.py  clients.py
app/models/: __init__.py  client.py  client_model.py  utils.py
app/templates/: contact_email.html  error.html  owner_email.html
app/templates/admin_page/: creat_client.html  edit_client.html  index.html
app/views/: __init__.py  auth.py  client.py  main.py
db/: README
tests/: test_auth.py  test_client.py  test_send_sms.py
