[tool.poetry]
name = "samee"
version = "0.1.0"
description = ""
authors = ["Ernest <ekedesh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
email-validator = "^1.1.3"
Flask = "^2.0.1"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
Jinja2 = "^3.0.1"
python-dotenv = "^0.19.0"
SQLAlchemy = "1.3.23"
Werkzeug = "^2.0.1"
WTForms = "^2.3.3"
pydantic = "^1.8.2"
Flask-Pydantic = "^0.8.0"
Flask-Admin = "^1.5.8"
Flask-BasicAuth = "^0.2.0"
Flask-Bootstrap = "^3.3.7"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
